--- a/index.html
+++ b/index.html
@@ -9,30 +9,47 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Bruno Gil</h1>
-            <p>Ingeniero en Ciencias de la Computación, Especialista en IA</p>
+        <h1>Bruno Gil Ramírez</h1>
+        <div class="description">
+            <p>Bachelor of Engineering in Computer Science</p>
+            <p><a href="https://www.cs.buap.mx/" alt="Computer Science Faculty of BUAP">Computer Science Faculty of BUAP</a></p>
+            <p>ML Developer / WEB Services Developer</p>
         </div>
     </header>
 
-    <div class="information" id="about">
+    <section class="information" id="about">
+        <h2>Sobre mí</h2>
         <div class="container">
-            <h2>Sobre mí</h2>
-            <img id="profilepic" src="static/images/Profile.png" alt="Me">
+            <img id="profilepic" src="static/images/Profile_sq.png" alt="Me">
             <p>Computer Science Engineer with a strong interest in Back-end Development, Data Science, and Artificial Intelligence (LLMs). My current priority is to apply my knowledge in service of an organization, contributing and collaborating as a team, with a focus on achieving the best possible results.</p>
         </div>
-    </div>
-
-    <div class="information" id="social">
-        <div class="container">
-            <h2>Mis Redes</h2>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/bruno-gil-ram%C3%ADrez-ba456327b/">LinkedIn</a></li>
-                <li><a href="https://github.com/BrunoGilRamirez">GitHub</a></li>
-                <li><a href="https://huggingface.co/BrunoGR">Huggingface</a></li>
-            </ul>
+        <div class="moreinfo">
+            <button id="Networks" >Networks</button>
+            <button id="MyResearch" >My Research</button>
+            <button id="MyWork" >My Work</button>
         </div>
-    </div>
+    </section>
+
+    <section class="information" id="Networks">
+        <h2>My Networks</h2>
+        <div class="container">
+
+        </div>
+    </section>
+    <section class="information" id="My Research" >
+        <h2>My Research</h2>
+        <div class="container" >
+
+        </div>
+    </section>
+
+    <section class="information" id="My Work" >
+        <h2>My Work</h2>
+        <div class="container" >
+
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Bruno Gil</p>
