Solo escuchame Research

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bruno Gil - Página Personal</title>
+    <title>Bruno Gil - Presentation site</title>
     <link rel="stylesheet" href="static/css/styles.css">
     <link rel="icon" href="favicon.ico">
 </head>
@@ -61,7 +61,7 @@
     <section class="information" id="My_Research">
         <h2>My Research</h2>
         <div class="container">
-            <p>Contenido sobre mis investigaciones.</p>
+            <p><a href="https://github.com/BrunoGilRamirez/Just_HEAR_ME"> Sólo Escúchame</a>: Spanish Emotional Accompaniment Chatbot .</p>
         </div>
     </section>
 
