Actualizar estilos CSS y agregar detalles de investigación en la sección "My Research"

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
     <section class="information" id="My_Research">
         <h2>My Research</h2>
         <div class="container">
-            <p><a href="https://github.com/BrunoGilRamirez/Just_HEAR_ME"> Sólo Escúchame</a>: Spanish Emotional Accompaniment Chatbot .</p>
+            <div class="research-details">
+                <h3><a href="https://github.com/BrunoGilRamirez/Just_HEAR_ME">Sólo Escúchame: Spanish Emotional Accompaniment Chatbot</a></h3>
+                <p>According to the World Health Organization (WHO), suicide was the fourth leading cause of death in the world for individuals aged 15 to 29 in 2019. Given the rapid increase in mental health issues, providing psychological support is both crucial and urgent. In this paper: (1) we propose Sólo Escúchame, the first open-source Spanish emotional assistance chatbot, based on LLaMA-2-7b-Chat. (2) We introduced the HEAR (Hispanic Emotional Accompaniment Responses) dataset, compiled from multiple English sources translated into Spanish, as well as generic data generated using ChatGPT-3.5-Turbo. Finally, (3) we propose an evaluation metric based on two semi-automatic assessment methods. Our system outperforms a range of state-of-the-art models in providing psychological assistance in Spanish. Our models and datasets are publicly available to facilitate reproducibility.</p>
+                <p><strong>Accepted at the 23rd edition of <a href="http://www.micai.org/2024/">MICAI</a></strong>, August 2024.</p>
+            </div>
         </div>
     </section>
 
